Development
	Added video/x-m4v mimetype, made a video at arstechnica work.
	Slow down the cache update messages to only 1 per 1/2 second
	More safety checks in Write method
	Don't allow NULL filename
	When opening the media and no window has been set, tell gnome-mplayer to run hidden
	Fix problem with looping
	QuickTime Media Link Parsing Support now plays http://movies.yahoo.com/feature/transformers.html
0.0.6
    Debian-ized the package
    Another ASX fix, strip out invalid unicode characters
    More work on the ASX parser to handle XMLish URLs and not break
    Fix ASX parser to increment the entry pointer when we encounter a entry tag
        This used for single ASX files where the entry entity contains several
        ref tags all pointing to the same content
    Fix ASX parser to handle entryrefs which basically is a url to another 
        asx file that contains the same media at different sites (mirrors)
    If the local version of the url is requested but not found then use the url as the source
    Handle request for "Next" item off the playlist differently
    Implement ASX parser and extract the ASX fields out
    Switch from using dbus_connection_setup_with_g_main to 
        using our own dbus dispatcher but only when we can't connect to 
        g_main_loop. Fixes some trailers in Opera and in Firefox
0.0.5 (Not released)    
    Create autobuilding spec file
    Fix doc location
    Make quicktime autohref urls work
    Version bump
0.0.4
    Fix looping problem and initialization
    Mark cancelled player as not ready
    Marked cancelled items as not opened
    Fix problem with request_*_value methods using wrong dest
    Handle Cancel signal from player
    Change request calls to use unique (based on controlid) object names
    Remove unnecessary glib flushes
    Trap several instance = NULL cases
    Fix problem where window is destroyed immediately
    Fix NULL pointer problem in several places